Option UseCompactObjectHeaders is not available until JDK25 (#11132)